--- a/hexatube/src/components/VideoGrid/VideoGrid.css
+++ b/hexatube/src/components/VideoGrid/VideoGrid.css
@@ -3,7 +3,7 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: flex-start;
-  gap: 16px;
+  gap: 0px 16px;
   padding: 16px;
   width: 100%;
   max-width: 1200px;
@@ -11,7 +11,6 @@
 }
 
 .video-item {
-  width: 200px; /* Соответствует ширине .video-card */
-  margin: 10px; /* Соответствует отступам .video-card */
-  /* Дополнительные стили могут быть добавлены при необходимости */
+  width: 200px;
+  margin: 10px;
 }
